@@ -6,6 +6,7 @@
 - API Addition: TMX built-in tile property "type" is now supported.
 - API Addition: Octree structure.
 - Fix: GlyphLayout: Several fixes for color markup runs with multi-line or wrapping texts
+- API change: Removed redundant redundant "Glyph lastGlyph" from BitmapFontData#getGlyphs(GlyphRun, CharSequence, int, int) 
 
 [1.10.0]
 - [BREAKING CHANGE] Android armeabi support has been removed. To migrate your projects: remove any dependency with natives-armeabi qualifier from your gradle build file, this apply to gdx-platform, gdx-bullet-platform, gdx-freetype-platform and gdx-box2d-platform.
